--- a/projector/templates/projector/task/create.html
+++ b/projector/templates/projector/task/create.html
@@ -1,9 +1,11 @@
 {% extends "projector/home.html" %}
 
 {% load i18n %}
+{% load native %}
 
 {% block extra_head %}{{ block.super }}
     {{ form.media }}
+    {% autocomplete_field form.owner %}
 {% endblock %}
 
 {% block col_main_title %}{% if form.instance.id %}{% trans "Update" %}{% else %}{% trans "Create new" %}{% endif %} {% trans "task" %}{% endblock %}
