--- a/projector/templates/projector/project/teams/create.html
+++ b/projector/templates/projector/project/teams/create.html
@@ -7,12 +7,12 @@
 
 {% block extra_head %}{{ block.super }}
     {{ form.media }}
-    {% autocomplete_field form.member %}
+    {% autocomplete_field form.group %}
 {% endblock %}
 
 {% block col_main_extra %}
 <div class="richtemplates-panel">
-    <h5>{% trans "Add member" %}</h5>
+    <h5>{% trans "Add team" %}</h5>
     <div class="richtemplates-panel-content">
         <form action="." method="post">
             {% csrf_token %}
@@ -24,7 +24,7 @@
                     value="{% trans "Submit" %}"/>
                 <input type="button"
                        value="{% trans "Cancel" %}"
-                       onclick="window.location='{{ form.instance.project.get_members_url }}'"/>
+                       onclick="window.location='{{ form.instance.project.get_teams_url }}'"/>
             </div>
         </form>
     </div>
